modules/SG/security-group.tf
resource "aws_security_group" "ec2-sg" {
  name        = var.ec2_sg_name
  description = "Allow HTTP traffic to EC2 instance"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "rds-sg" {
  name        = var.rds_sg_name
  description = "Allow traffic from EC2"
  vpc_id      = var.vpc_id

    ingress {
        description     = "Allow traffic from EC2"
        from_port       = 3306
        to_port         = 3306
        protocol        = "tcp"
        security_groups = [aws_security_group.ec2-sg.id]
    }     

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

}
